--- a/SASS/_index.scss
+++ b/SASS/_index.scss
@@ -256,22 +256,18 @@ a{
                     }
 
                     .btn-like{
-                        font-size: 0;
-                        cursor: pointer;
-                        transition-property: background;
-                        &:hover{
-                            background: linear-gradient(to top, $primary 0%, $pink2 50%);
-                        }
-
-                    }
-
-                    .fa-heart{
+                        background: none;
+                        border: none;
+                        margin-right: 10px;
                         font-size: 22px;
-                        font-weight: 200;
+                        transition: all 300ms ease;
+                            &:active{
+                                color: #9356dc;
+                        }
                     }
                 }
-            }             
-        }
+            }
+        }             
     }
 }
 
@@ -318,7 +314,7 @@ a{
     }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1020px) {
   /* Styles pour la version desktop */
     section{
         width: 100%;
