--- a/SASS/app.css
+++ b/SASS/app.css
@@ -249,16 +249,14 @@ a {
   font-weight: bold;
 }
 .restaurants .restaurants-cards .card .card-txt .card-header .btn-like {
-  font-size: 0;
-  cursor: pointer;
-  transition-property: background;
-}
-.restaurants .restaurants-cards .card .card-txt .card-header .btn-like:hover {
-  background: linear-gradient(to top, #9356dc 0%, #ff79da 50%);
-}
-.restaurants .restaurants-cards .card .card-txt .card-header .fa-heart {
+  background: none;
+  border: none;
+  margin-right: 10px;
   font-size: 22px;
-  font-weight: 200;
+  transition: all 300ms ease;
+}
+.restaurants .restaurants-cards .card .card-txt .card-header .btn-like:active {
+  color: #9356dc;
 }
 
 /*Footer*/
@@ -296,7 +294,7 @@ a {
   height: 12px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1020px) {
   /* Styles pour la version desktop */
   section {
     width: 100%;
