--- a/SASS/restaurant.css
+++ b/SASS/restaurant.css
@@ -95,6 +95,24 @@ a {
   background: #eaeaea;
 }
 
+.btn-round {
+  width: 218px;
+  height: 50px;
+  border: none;
+  border-radius: 30px;
+  color: white;
+  font-size: medium;
+  margin-top: 30px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+  background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
+  transition: all 300ms ease;
+}
+.btn-round:hover {
+  filter: brightness(1.2);
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.35);
+}
+
 /*Footer*/
 .footer-container {
   background-color: black;
