--- a/SASS/restaurant.css
+++ b/SASS/restaurant.css
@@ -2,23 +2,26 @@
 /*Général*/
 * {
   box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Roboto";
 }
 
 body {
-  background: #f6f6f6;
+  background: white;
   margin: 0;
 }
 
 h1 {
-  font-size: 16px;
+  font-family: shrikhand;
+  font-size: 28px;
   font-weight: 500;
   font-style: italic;
+  margin: 0;
 }
 
 h2 {
   font-size: 16px;
   font-weight: 200;
+  margin: 0;
 }
 
 h3 {
@@ -27,20 +30,20 @@ h3 {
   margin: 0;
 }
 
-.section-title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-top: 0;
-}
-
-p {
+.card-subtitle {
   font-size: 15px;
   font-weight: 200;
   margin: 0;
 }
 
-.fa-solid {
-  font-size: 16px;
+.card-price {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.fa-regular {
+  font-size: 22px;
 }
 
 a {
@@ -48,16 +51,12 @@ a {
   text-decoration: none;
 }
 
-.btn-round, .step-content {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
 /*Header*/
 .header-container {
   width: 100%;
   display: flex;
   flex-direction: column;
-  height: 113px;
+  height: 67px;
 }
 .header-container .header {
   display: flex;
@@ -70,13 +69,10 @@ a {
   background-color: white;
 }
 .header-container .header .fa-arrow-left {
-  position: absolute;
   width: 30px;
   height: 30px;
   color: #353533;
   align-content: center;
-  left: 20px;
-  display: none;
 }
 .header-container .header .logo {
   justify-content: center;
@@ -85,30 +81,82 @@ a {
   width: 197px;
   height: 36px;
 }
-.header-container .location {
+
+.main-container .image-container {
+  position: relative;
+  width: 100%;
+  height: 231px;
+  overflow: hidden;
+}
+.main-container .image-container img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  -o-object-position: center;
+     object-position: center;
+}
+.main-container .carte {
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
+  background-color: #f6f6f6;
+  padding: 10px;
+  margin-top: -40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-container .carte .restaurant-title {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 17px;
-  padding: 10px;
-  background: #eaeaea;
+  justify-content: space-between;
+  padding-top: 30px;
+  width: 100%;
 }
-
-.btn-round {
+.main-container .carte .restaurant-title .btn-like {
+  border: none;
+  background: none;
+}
+.main-container .carte .carte-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 30px;
+  width: 100%;
+}
+.main-container .carte .carte-details .card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: 69px;
+  padding: 15px;
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.25);
+}
+.main-container .carte .carte-details .card .card-txt {
+  display: flex;
+  flex-direction: column;
+}
+.main-container .carte .carte-details .card .card-price {
+  align-items: end;
+}
+.main-container .btn-round {
   width: 218px;
   height: 50px;
   border: none;
   border-radius: 30px;
   color: white;
   font-size: medium;
-  margin-top: 30px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-top: 30px;
+  margin-bottom: 20px;
   cursor: pointer;
   background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
   transition: all 300ms ease;
 }
-.btn-round:hover {
+.main-container .btn-round:hover {
   filter: brightness(1.2);
   box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.35);
 }
