--- a/SASS/restaurant.scss
+++ b/SASS/restaurant.scss
@@ -14,21 +14,24 @@ $shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 /*Général*/
 *{
     box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Roboto";
 }
 
 body{
-    background: $background;
+    background: white;
     margin: 0;
 }
 h1{
-    font-size: 16px;
+    font-family:shrikhand;
+    font-size: 28px;
     font-weight: 500;
     font-style: italic;
+    margin: 0;
 }
 h2{
     font-size: 16px;
     font-weight: 200;
+    margin: 0;
 }
 
 h3{
@@ -36,26 +39,22 @@ h3{
     font-weight: 500;
     margin: 0;
 }
-.section-title{
-    font-size: 24px;
-    font-weight: bold;
-    margin-top: 0;
-  }
-p{
+.card-subtitle{
     font-size: 15px;
     font-weight: 200;
     margin: 0;
 }
-.fa-solid{
-    font-size: 16px;
+.card-price{
+    font-size: 15px;
+    font-weight: bold;
+    margin: 0;
+}
+.fa-regular{
+    font-size: 22px;
 }
 a{
     color: inherit;
     text-decoration: none;
-}
-
-.btn-round, .step-content {
-  box-shadow: $shadow;
 }
 
 /*Header*/
@@ -63,7 +62,7 @@ a{
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 113px;
+    height: 67px;
     .header{
         display: flex;
         flex-direction: row;
@@ -74,13 +73,10 @@ a{
         position: relative;
         background-color: white;
         .fa-arrow-left {
-            position: absolute;
             width: 30px;
             height: 30px;
             color: $grey;
             align-content: center;
-            left:20px;
-            display: none;
         }
         .logo{
             justify-content: center;
@@ -90,26 +86,77 @@ a{
             }
         }
     }
-    .location{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        gap: 17px;
-        padding: 10px;
-        background:$grey2;
-    }
 }
 
-  .btn-round {
+.main-container{
+    .image-container{
+        position: relative;
+        width: 100%;
+        height: 231px;
+        overflow: hidden;
+        img{
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            object-position: center;
+        }
+    }
+    .carte{
+        border-top-left-radius: 40px;
+        border-top-right-radius: 40px;
+        background-color: $background;
+        padding: 10px;
+        margin-top: -40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .restaurant-title{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding-top: 30px;
+            width: 100%;
+            .btn-like{
+                border: none;
+                background: none;
+            }
+        }
+        .carte-details{
+            display: flex;
+            flex-direction: column;
+            gap:10px;
+            margin-top: 30px;
+            width: 100%;
+            .card{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: flex-end;
+                height: 69px;
+                padding:15px;
+                background: white;
+                border-radius: 15px;
+                box-shadow: 0 0 12px rgba(0, 0, 0, 0.25); 
+                .card-txt{
+                    display: flex;
+                    flex-direction: column;
+                }
+                .card-price{
+                    align-items: end;
+                }
+            }
+        }
+    }
+    .btn-round {
         width: 218px;
         height: 50px;
         border: none;
         border-radius: 30px;
         color: white;
         font-size: medium;
-        margin-top: 30px;
         box-shadow: $shadow;
+        margin-top: 30px;
+        margin-bottom: 20px;
         cursor: pointer;
         background: linear-gradient(to top, #9356dc 0%, #ff79da 100%);
         transition: all 300ms ease;
@@ -118,7 +165,7 @@ a{
             box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.35);    
         }
     }
-
+}
 
 /*Footer*/
 .footer-container{
